--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,24 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/leaflet": "^1.7.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-calendar": "^3.1.4",
+    "@types/react-clock": "^3.0.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.7",
     "fontsource-roboto": "^4.0.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
+    "react-calendar": "^3.3.1",
+    "react-clock": "^3.0.0",
     "react-dom": "^17.0.1",
     "react-grid-gallery": "^0.5.5",
+    "react-leaflet": "^3.1.0",
+    "react-open-weather": "^1.1.1",
+    "react-open-weather-widget": "^1.1.0",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
