--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/multer": "^1.4.5",
     "axios": "^0.21.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
